--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
     </script>
 
     <script>
+        // Blocked (commented out) the redirect function
+        /*
         async function checkMatchAccess() {
             const urlParams = new URLSearchParams(window.location.search);
             const matchId = urlParams.get("id");
@@ -194,6 +196,7 @@
         }
 
         checkMatchAccess();
+        */
     </script>
 
     <div id="popup" class="popup" style="display: none;">
