--- a/index.html
+++ b/index.html
@@ -1,74 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./style.css">
+      <title>Tata IPL Live</title>
+  </head>
+  <body>
+  <center>
+      <img src="https://i.ibb.co/mr3mypnF/tata-ipl-logo-png-white-by-harshmore7781-dezxlwr-pre.png" alt="IPL 2025" class="logo">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Tata IPL Live</title>
+<div class="container">
+<center>
+<script type="text/javascript">
+ atOptions = {
+  'key' : '6f8560f0346748875f7a1562035e55dd',
+  'format' : 'iframe',
+  'height' : 60,
+  'width' : 468,
+  'params' : {}
+ };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6f8560f0346748875f7a1562035e55dd/invoke.js"></script>
+</center>
+</div>
+      <div class="iframe-container" id="iframeContainer"></div>
+      <div class="container">
+          <div id="title" class="match-title">IPL Live Streaming</div>
+          <div id="subtitle" class="match-subtitle">Select a channel to start watching</div>
+      </div>
+      <div class="container">
+          <strong>Channels</strong><br><select id="channelDropdown"></select>
+      </div>
+      <div class="container telegram-container">
+          <a class="tg-button" href="https://t.me/sportifylive" target="_blank">
+              <img src="https://telegram.org/img/t_logo.png" alt="Telegram Logo">
+              Join Telegram
+          </a>
+      </div>
+    <div id="ad-container" class="container"></div>
+      <div class="container match-details">
+        <h2 style="text-align: center; color: yellow;"><strong>Match Details</strong></h2>
+          <div class="flags-container">
+              <img id="team1-flag" class="flag" src="" alt="Team 1 Flag">
+              <span class="vs-text">VS</span>
+              <img id="team2-flag" class="flag" src="" alt="Team 2 Flag">
+          </div>
+          <div id="number" style="text-align: left;"></div>
+          <div id="home-team" style="text-align: left;"></div>
+          <div id="away-team" style="text-align: left;"></div>
+          <div id="venue" style="text-align: left;"></div>
+          <div id="start-time" style="text-align: left;"></div>
+      </div>
+
+
     <style>
-        #popup {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-
-        .popup-content {
-            background-color: #222;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 300px;
-        }
-
-        .popup-content h2 {
-            margin: 0 0 10px;
-            color: #00aaff;
-        }
-
-        .popup-content p {
-            margin: 0 0 20px;
-        }
-
-        .popup-content button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .popup-content .join-btn {
-            background-color: #008fd6;
-            color: white;
-        }
-
-        .popup-content .close-btn {
-            background-color: #555;
-            color: white;
-        }
-
-        #popup .popup-content {
-            border: 3px solid #5CABFF;
-            box-shadow: 0px 0px 15px rgba(92, 171, 255, 0.8);
-        }
-
         /* CSS for the ad container */
         #ad-container {
             margin: 20px auto;
             text-align: center;
-            width: 95vw;
+            width: 95vw; /* Full width on smaller devices */
         }
 
         #ad-container img {
@@ -83,8 +74,8 @@
             display: inline-block;
             margin-top: 10px;
             padding: 10px 20px;
-            background-color: #ff6b6b;
-            color: #000;
+            background-color: #ff6b6b; /* Light red */
+            color: #000; /* Black text */
             text-decoration: none;
             border-radius: 5px;
             font-size: 16px;
@@ -93,37 +84,18 @@
         }
 
         #ad-container .ad-btn:hover {
-            background-color: #ff4c4c;
+            background-color: #ff4c4c; /* Slightly darker red on hover */
         }
 
         /* Media query for larger devices */
         @media (min-width: 768px) {
             #ad-container {
-                width: 75vw;
+                width: 75vw; /* 75% width on larger devices */
             }
         }
     </style>
-</head>
 
-<body>
-    <center>
-        <img src="https://i.ibb.co/mr3mypnF/tata-ipl-logo-png-white-by-harshmore7781-dezxlwr-pre.png" alt="IPL 2025" class="logo">
-        <div class="iframe-container" id="iframeContainer"></div>
-        <div class="container">
-            <div id="title" class="match-title">IPL Live Streaming</div>
-            <div id="subtitle" class="match-subtitle">Select a channel to start watching</div>
-        </div>
-        <div class="container">
-            <strong>Channels</strong><br><select id="channelDropdown"></select>
-        </div>
-        <div class="container telegram-container">
-            <a class="tg-button" href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank">
-                <img src="https://telegram.org/img/t_logo.png" alt="Telegram Logo">
-                Join Telegram
-            </a>
-        </div>
-        <div id="ad-container" class="container"></div>
-    </center>
+
 
     <script>
         // Function to get the query parameter from the URL
@@ -133,20 +105,19 @@
         }
 
         // Fetch the JSON data
-        fetch('https://binge-api.vercel.app/ipl.json')
+        fetch('https://raw.githubusercontent.com/sportifylive/IPL/main/ads.json')
             .then(response => response.json())
             .then(data => {
                 const matchId = getQueryParam('id'); // Get the 'id' parameter from the URL
                 const match = data.matches.find(match => match.id === matchId); // Find the match with the given ID
-
-                if (match) {
+                  if (match) {
                     const adContainer = document.getElementById('ad-container');
-                    adContainer.innerHTML = `
+                    adContainer.innerHTML = 
                         <a href="${match.url}" target="_blank">
                             <img src="${match.poster}" alt="${match.team1} vs ${match.team2}">
                         </a>
-                        <a href="https://t.me/binge_adsbot" class="ad-btn" target="_blank">Place your ad here</a>
-                    `;
+                        <a href="https://t.me/advertisement_sportify_bot" class="ad-btn" target="_blank">Place your ad here</a>
+                    ;
                 } else {
                     console.log('Match not found');
                 }
@@ -154,85 +125,71 @@
             .catch(error => console.error('Error fetching JSON:', error));
     </script>
 
-    <script>
-        // Blocked (commented out) the redirect function
-        /*
-        async function checkMatchAccess() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const matchId = urlParams.get("id");
+</center>
+      <script src="./stream.js"></script>
 
-            if (!matchId) {
-                window.location.href = "https://t.me/Axtream_Bingewav";
-                return;
-            }
+          <script src="./info.js"></script>
+<script>
+async function checkMatchAccess() {
+  // Step 1: Extract the "id" parameter from the URL.
+  const urlParams = new URLSearchParams(window.location.search);
+  const matchId = urlParams.get("id");
 
-            try {
-                const response = await fetch("https://binge-api.vercel.app/ipl.json");
-                const data = await response.json();
-                const match = data.matches.find(m => m.id === matchId);
-                if (!match) {
-                    window.location.href = "https://t.me/Axtream_Bingewav";
-                    return;
-                }
+  if (!matchId) {
+    window.location.href = "https://t.me/Axtream_Bingewav";
+    return;
+  }
 
-                const [day, month, year] = match.date.split("-").map(Number);
-                let matchDateIST = new Date(year, month - 1, day, 4, 0, 0);
-                matchDateIST.setDate(matchDateIST.getDate() + 1);
+  try {
+    // Step 2: Fetch the match data from the JSON file.
+    const response = await fetch("https://binge-api.vercel.app/ipl.json");
+    const data = await response.json();
+    const match = data.matches.find(m => m.id === matchId);
+    if (!match) {
+      window.location.href = "https://t.me/Axtream_Bingewav";
+      return;
+    }
 
-                let nowIST = new Date().toLocaleString("en-US", { timeZone: "Asia/Kolkata" });
-                nowIST = new Date(nowIST);
+    // Step 3: Build the next day's cutoff time from the match date.
+    // The JSON date is in "DD-MM-YYYY". We create an IST-based Date object.
+    const [day, month, year] = match.date.split("-").map(Number);
+    
+    // Create a Date object in IST
+    let matchDateIST = new Date(year, month - 1, day, 4, 0, 0); // Next day 4:00 AM IST
 
-                console.log("Current IST:", nowIST);
-                console.log("Cutoff (Next Day 04:00 AM IST):", matchDateIST);
+    // Add 1 day to move to next day's 4:00 AM
+    matchDateIST.setDate(matchDateIST.getDate() + 1);
 
-                if (nowIST > matchDateIST) {
-                    window.location.href = "https://t.me/Axtream_Bingewav";
-                }
+    // Step 4: Get the current IST time locally
+    let nowIST = new Date().toLocaleString("en-US", { timeZone: "Asia/Kolkata" });
+    nowIST = new Date(nowIST);
 
-            } catch (error) {
-                console.error("Error fetching data:", error);
-                window.location.href = "https://t.me/Axtream_Bingewav"; 
-            }
-        }
+    console.log("Current IST:", nowIST);
+    console.log("Cutoff (Next Day 04:00 AM IST):", matchDateIST);
 
-        checkMatchAccess();
-        */
-    </script>
+    // Step 5: Compare and redirect if the current time is beyond cutoff.
+    if (nowIST > matchDateIST) {
+      window.location.href = "https://t.me/Axtream_Bingewav";
+    }
 
-    <div id="popup" class="popup" style="display: none;">
-        <div class="popup-content">
-            <h2>Support Us!</h2>
-            <p>Join Our Telegram Channel @TEAMROHITOFFICAL45</p>
-            <button class="join-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">Join Now</button>
-            <button class="close-btn" onclick="closePopup()">Already Joined</button>
-        </div>
-    </div>
+  } catch (error) {
+    console.error("Error fetching data:", error);
+    window.location.href = "https://t.me/Axtream_Bingewav"; // Redirect in case of errors
+  }
+}
 
-    <script>
-        // Show the popup
-        document.getElementById("popup").style.display = "flex";  // Show the popup
+checkMatchAccess();
+</script>
 
-        // Close popup function
-        function closePopup() {
-            const popup = document.getElementById('popup');
-            popup.style.display = 'none';
-        }
-    </script>
+<script>
+      // Show the alert
+      if (confirm("Join Our Telegram Channel @Sportifylive for updates and more")) {
+          // Redirect to the Telegram channel if 'OK' is clicked
+          window.location.href = "https://t.me/sportifylive";
+      } else {
+          // Close the alert if 'Cancel' is clicked (do nothing)
+      }
+</script>   
 
-    <div class="container">
-        <center>
-            <script type="text/javascript">
-                var atOptions = {
-                    'key': 'f987b8d0a45365a126993d3430a5f0e5',
-                    'format': 'iframe',
-                    'height': 60,
-                    'width': 468,
-                    'params': {}
-                };
-            </script>
-            <script type="text/javascript" src="//www.highperformanceformat.com/f987b8d0a45365a126993d3430a5f0e5/invoke.js"></script>
-        </center>
-    </div>
-</body>
-
-</html>
+  </body>
+  </html>
