--- a/index.html
+++ b/index.html
@@ -1,123 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQ6RG2YZ45"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQ6RG2YZ45');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICAL45_LIVE</title>
-    <link rel="icon" href="https://i.postimg.cc/prMQRWMR/skfav.png" type="image/png" sizes="250x250">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.1/controls.min.css" crossorigin="anonymous">
+    <title>Premium Video Player</title>
+    <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
     <style>
-        /* Overflow menu style */
-        .shaka-overflow-menu {
-            background-color: rgb(41, 41, 163);
-            color: rgb(153, 153, 153);
+        /* Full Black Background */
+        body {
+            margin: 0;
+            padding: 0;
+            background: #000000;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        .shaka-overflow-menu button:hover {
-            background-color: rgb(45, 45, 45);
+
+        /* Telegram Button Styling */
+        .telegram-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #0088cc;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 10px;
+            text-decoration: none;
+            margin-bottom: 15px;
+            box-shadow: 0px 0px 10px rgba(0, 136, 204, 0.5);
         }
-        .shaka-overflow-button-label {
-            color: rgb(245, 245, 245);
+
+        .telegram-btn img {
+            width: 20px;
+            margin-right: 10px;
         }
-        .shaka-current-selection-span {
-            color: rgb(202, 202, 202);
+
+        /* Video Container - Slightly Smaller to Show Edges */
+        .video-container {
+            width: 98vw;
+            height: 55.25vw;
+            max-height: 100vh;
+            border: 3px solid #007BFF;
+            box-shadow: 0px 0px 20px rgba(0, 123, 255, 0.5);
+            border-radius: 20px;
+            overflow: hidden;
         }
-        .material-icons-round {
-            color: rgb(230, 230, 230);
+
+        /* JW Player Styling */
+        #jwplayerDiv {
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
         }
-        /* Overflow sub menu style */
-        .shaka-settings-menu {
-            background-color: rgb(35, 35, 35);
-            color: rgb(255, 255, 255);
+
+        /* Join Telegram Button */
+        .join-btn {
+            background: linear-gradient(to right, #007BFF, #0044CC);
+            color: white;
+            font-size: 15px;
+            font-weight: bold;
+            padding: 12px 30px;
+            border-radius: 50px;
+            text-decoration: none;
+            margin-top: 15px;
+            box-shadow: 0px 0px 10px rgba(0, 123, 255, 0.5);
         }
-        .shaka-settings-menu button {
-            color: rgb(255, 255, 255);
+
+        /* Popup Style */
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
         }
-        .shaka-settings-menu button:hover {
-            background-color: rgb(45, 45, 45);
+
+        .popup-content {
+            background: #222;
+            color: white;
+            padding: 15px;
+            border-radius: 8px;
+            text-align: center;
+            width: 75%;
+            max-width: 260px;
+            position: relative;
+        }
+
+        .popup-content h2 {
+            margin: 0 0 8px;
+            font-size: 18px;
+            color: #4da3ff;
+        }
+
+        .popup-content p {
+            font-size: 14px;
+            margin: 8px 0;
+        }
+
+        .popup-buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .popup-buttons button {
+            padding: 8px;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .join-btn-popup {
+            background: #4da3ff;
+            color: white;
+            border-radius: 5px;
+        }
+
+        .already-btn {
+            background: #444;
+            color: white;
+            border-radius: 5px;
+        }
+
+        /* Clickable Telegram Link */
+        .telegram-link {
+            color: #4da3ff;
+            font-weight: bold;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Golden Glow Effect for Second Popup */
+        #customPopup .popup-content {
+            border: 3px solid #FFD700;
+            box-shadow: 0px 0px 15px rgba(255, 215, 0, 0.8);
         }
     </style>
 </head>
-<body style="margin:0">
-    <center>
-        <div data-shaka-player-container style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover">
-            <video autoplay muted data-shaka-player id="video" 
-                poster="https://images.fubo.tv/channel-config-ui/station-logos/on-dark/willow_2023_primary-white.png" 
-                style="width:100%;height:100%"></video>
+<body>
+
+    <!-- Telegram Channel Button -->
+    <a href="https://t.me/cricdevotee" class="telegram-btn">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
+        Editverse
+    </a>
+
+    <!-- Video Player (Slightly Smaller to Show Border Edges) -->
+    <div class="video-container">
+        <div id="jwplayerDiv"></div>
+    </div>
+
+    <!-- Join Telegram Button -->
+    <a href="https://t.me/+lkbpBqFd0FljNzJl" class="join-btn">Join Telegram</a>
+
+    <!-- Second Popup -->
+    <div class="popup" id="customPopup">
+        <div class="popup-content">
+            <h2>Support Us!</h2>
+            <p>Join our Telegram channel <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-link">teamrohitoffical45</a> for more updates.</p>
+            <div class="popup-buttons">
+                <button class="join-btn-popup" onclick="window.location.href='https://t.me/+lkbpBqFd0FljNzJl'">Join Now</button>
+                <button class="already-btn" onclick="closePopup()">Already Joined</button>
+            </div>
         </div>
-    </center>
+    </div>
 
     <script>
-        async function init() {
-            let video = document.getElementById("video");
-            let ui = video.ui;
-            let controls = ui.getControls();
-            let player = controls.getPlayer();
-
-            player.configure({
-                drm: {
-                    clearKeys: {
-                        "6016f23a660b6428d767758b52e54a72": "df006c09745771c9d820f79c667f5a8b"
-                    }
-                }
-            });
-
-            ui.configure({
-                controlPanelElements: ["play_pause", "mute", "volume", "spacer", "time_and_duration", "quality", "fullscreen", "overflow_menu"],
-                volumeBarColors: {
-                    base: 'rgba(63, 187, 1, 1)',
-                    level: 'rgb(255, 69, 0)'
-                },
-                seekBarColors: {
-                    base: 'rgb(41, 41, 163)',
-                    buffered: 'rgb(35, 99, 3)',
-                    played: 'rgba(63, 187, 1, 1)'
-                }
-            });
-
-            window.player = player;
-            window.ui = ui;
-
-            player.addEventListener("error", onPlayerErrorEvent);
-            controls.addEventListener("error", onUIErrorEvent);
-
-            try {
-                // Fixed URL (removed the line break)
-                await player.load("https://a179aivottepl-a.akamaihd.net/lhr-nitro/live/clients/dash/enc/ll8ogw2giu/out/v1/0a60e89eae5a4d92ab556fa559f4c5cd/cenc.mpd");
-                console.log("The video has now been loaded!");
-            } catch (error) {
-                onPlayerError(error);
+        // First Popup (Browser Alert)
+        setTimeout(() => {
+            let firstPopup = confirm("Join Our Telegram Channel teamrohitoffical45");
+            if (firstPopup) {
+                window.location.href = "https://t.me/+lkbpBqFd0FljNzJl";
             }
+            // Show Second Popup after the first one closes
+            setTimeout(() => {
+                document.getElementById("customPopup").style.display = "flex";
+            }, 500);
+        }, 1000);
+
+        // Close Second Popup
+        function closePopup() {
+            document.getElementById("customPopup").style.display = "none";
         }
 
-        function onPlayerErrorEvent(event) {
-            onPlayerError(event.detail);
-        }
-
-        function onPlayerError(error) {
-            console.error("Shaka Player Error:", error.message || error);
-        }
-
-        function onUIErrorEvent(event) {
-            onPlayerError(event.detail);
-        }
-
-        function initFailed(error) {
-            console.error("Unable to load the UI library!");
-        }
-
-        function welcome() {
-            window.open("https://t.me/+e6G48oujQuExOTg1");
-        }
-
-        document.addEventListener("shaka-ui-loaded", init);
-        document.addEventListener("shaka-ui-load-failed", initFailed);
-
-        // Telegram prompt
-        const message = "JOIN OUR TELEGRAM CHANNEL FOR MORE LIVE STREAM LINKS";
-        if (confirm(message)) {
-            window.location.href = "https://t.me/+e6G48oujQuExOTg1";
-        }
+              // Fetch JSON and Load JW Player
+        fetch("https://raw.githubusercontent.com/StmpupCricket/Jio-Hotstar-json/refs/heads/main/data.json") // Replace with actual hosted JSON URL
+            .then(response => response.json())
+            .then(data => {
+                jwplayer("jwplayerDiv").setup({
+                    file: data.stream_url,
+                    autostart: true,
+                    width: "100%",
+                    height: "100%",
+                    stretching: "uniform"
+                });
+            })
+            .catch(error => console.error("Error loading JSON:", error));
     </script>
+
 </body>
 </html>
