--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 <body>
 
     <!-- Telegram Channel Button -->
-    <a href="https://t.me/cricdevotee" class="telegram-btn">
+    <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
-        Editverse
+        Teamrohitoffical45 
     </a>
 
     <!-- Video Player (Slightly Smaller to Show Border Edges) -->
