--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Video Player</title>
+    <title>Teamrohitoffical45_live</title>
     <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
     <style>
         /* Full Black Background */
