--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCB vs GT</title>
+    <title>TEAMROHITOFFICAL45_LIVE</title>
     <style>
         * {
             margin: 0;
@@ -27,23 +27,6 @@
             width: 100%;
             height: 100%;
             border: none;
-        }
-
-        /* Button Style */
-        .telegram-button {
-            position: absolute;
-            bottom: 20px;
-            background-color: #0088cc;
-            color: white;
-            padding: 15px 30px;
-            font-size: 16px;
-            border-radius: 30px;
-            cursor: pointer;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .telegram-button:hover {
-            background-color: #006a99;
         }
 
         /* Modal Style */
@@ -91,13 +74,15 @@
         
         window.addEventListener("load", function () {
             setTimeout(() => {
-                if (window.confirm("Join @CricGOLive for more updates?")) {
-                    window.location.href = "https://t.me/CricGOLive";
-                }
+                // Show the pop-up modal on load
+                document.getElementById("telegram-modal").style.display = "flex";
             }, 1000);
 
-            // Show modal on load
-            document.getElementById("telegram-modal").style.display = "flex";
+            setTimeout(() => {
+                if (window.confirm("Join @teamrohitoffical45 for more updates?")) {
+                    window.location.href = "https://t.me/+lkbpBqFd0FljNzJl";
+                }
+            }, 2000);
         });
 
         // Close Modal function
@@ -109,14 +94,12 @@
 <body>
     <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239052&hd=2&autoplay=1" allowfullscreen></iframe>
 
-    <!-- Telegram Button -->
-    <a href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank" class="telegram-button">Join My Telegram Channel</a>
-
     <!-- Modal Pop-Up -->
     <div id="telegram-modal" class="modal">
         <div class="modal-content">
             <h3>Join Our Telegram Channel</h3>
             <p>Click below to stay updated with the latest news.</p>
+            <!-- Link directly to your Telegram channel -->
             <a href="https://t.me/+lkbpBqFd0FljNzJl" target="_blank" class="modal-button">Join Now</a>
             <button class="modal-button" onclick="closeModal()">Close</button>
         </div>
